--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,7 +30,9 @@ jobs:
         aws-region: ${{ secrets.AWS_REGION }}
     
     - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v2
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_wrapper: false
     
     - name: Terraform Init and Apply
       run: |
