--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -11,7 +11,11 @@ dependencies {
     
     // CLI specific dependencies
     implementation 'info.picocli:picocli-spring-boot-starter:4.7.4'
-    
+
+    // Spring Shell for interactive CLI
+    implementation 'org.springframework.shell:spring-shell-starter:3.1.3'
+    implementation 'org.jline:jline:3.23.0'
+
     // JWT & OAuth
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
