--- a/cli/src/main/resources/application.yml
+++ b/cli/src/main/resources/application.yml
@@ -9,4 +9,4 @@ cli:
     base-url: ${API_BASE_URL:http://localhost:8080/api}
   auth:
     google:
-      client-id: ${GOOGLE_CLIENT_ID:your-google-client-id}
+      client-id: ${GOOGLE_CLIENT_ID:897562973691-e4hice78vphctfj481fbm1un04oo9d11.apps.googleusercontent.com}
