--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -16,6 +16,9 @@ dependencies {
     implementation 'org.springframework.shell:spring-shell-starter:3.1.3'
     implementation 'org.jline:jline:3.23.0'
 
+    // JNA for proper terminal detection on various platforms
+    implementation 'net.java.dev.jna:jna:5.13.0'
+    implementation 'org.fusesource.jansi:jansi:2.4.1'
     // JWT & OAuth
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
