--- a/cli/src/main/resources/application.yml
+++ b/cli/src/main/resources/application.yml
@@ -3,10 +3,29 @@ spring:
     name: task-management-cli
   main:
     web-application-type: none
+    allow-bean-definition-overriding: true
+  banner:
+    location: classpath:banner.txt
+    enabled: false
 
 cli:
   api:
     base-url: ${API_BASE_URL:http://localhost:8080/api}
   auth:
     google:
-      client-id: ${GOOGLE_CLIENT_ID:897562973691-e4hice78vphctfj481fbm1un04oo9d11.apps.googleusercontent.com}
+      client-id: ${GOOGLE_CLIENT_ID:your_google_client_id}
+
+spring.shell:
+  command:
+    history:
+      enabled: true
+    help:
+      enabled: true
+    version:
+      enabled: true
+  interactive:
+    enabled: true
+  jline:
+    ansi: always
+    color:
+      enabled: true
